# financial-evidence-lab

./: .gitignore  .gitleaksignore  .prettierignore  AGENTS.md  CLAUDE.md  LICENSE  Makefile  PLAN.md  README.md  SPEC.md  TASKS.md  eslint.config.mjs  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  requirements-dev.txt  tsconfig.base.json  tsconfig.json  vitest.config.ts
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: agent-task.yml  config.yml
.github/workflows/: ci.yml
.specify/: feature.json  init-options.json  integration.json
.specify/integrations/: codex.manifest.json  speckit.manifest.json
.specify/memory/: constitution.md
.specify/templates/: plan-template.md  spec-template.md  tasks-template.md
.specify/workflows/: workflow-registry.json
apps/api/: pyproject.toml
apps/api/app/: __init__.py  auth.py  config.py  corpus.py  costs.py  db.py  dependencies.py  errors.py  main.py  observability.py  reader.py  retrieval.py  workspaces.py
apps/api/tests/: conftest.py  test_auth.py  test_corpus_api.py  test_costs.py  test_health.py  test_ingestion_e2e.py  test_reader_api.py  test_retrieval_api.py  test_smoke_gate.py  test_tenancy.py  test_workspaces.py
apps/web/: ACCEPTANCE.md  README.md  next.config.ts  package.json  playwright.config.ts  tsconfig.json
db/migrations/: 0001_platform_core.sql  0002_corpus_core.sql  0003_retrieval_core.sql  0004_extraction_core.sql  README.md  (+1 more)
infra/: README.md
scripts/: audit-allowlist.json  audit-bulk.mjs  audit-bulk.test.mjs
workers/: pyproject.toml
(+223 files in other folders)
